[enhancement] fix sonar issues